# benchmark-poetry-install-vs-docker-pull

./: Dockerfile  Makefile  README.md  pyproject.toml
